<resources>
    <string name="app_name">Cinemex</string>
    <string name="toolbar_title">About to start</string>
    <string name="toolbar_trailer">Trailer</string>
    <string name="start_in">Start In \n %s</string>
    <string name="starting">Starting \n now</string>
    <string name="movie_poster">MoviePoster</string>
    <string name="movie_info">Movie Info</string>
    <string name="arrow">arrow</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="original_title">ORIGINAL TITLE</string>
    <string name="classification">CLASIFICATION</string>
    <string name="cast">CAST</string>
    <string name="director">DIRECTOR</string>
    <string name="country">COUNTRY</string>
    <string name="year">YEAR</string>
    <string name="genre">GENRE</string>
    <string name="error_message">an error occurred: %1$s</string>
    <string name="no_movies_message">No movies in the next %1$d minutes.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_config_msg">Configura la cantidad de minutos para ver las proximas peliculas</string>
    <string name="apply_button">Aplicar</string>
    <string name="minutes_left">minutos antes</string>
    <string name="trailer_title">Trailer</string>
    <string-array name="time_settings">
        <item>180</item>
        <item>150</item>
        <item>120</item>
        <item>90</item>
        <item>60</item>
        <item>30</item>
    </string-array>
</resources>