<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?themePrimary">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?themePrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:theme="@style/AppTheme.Apply"
        android:padding="15dp"
        android:text="@string/apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:theme="@style/AppTheme.message"
        android:gravity="center"
        android:text="@string/time_config_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply" />

    <ImageView
        android:id="@+id/arrowUp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24_black"
        tools:ignore="VectorDrawableCompat" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="97dp"
        android:layout_height="258dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:theme="@style/NumberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowUp"
        />

    <ImageView
        android:id="@+id/arrowDown"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24_black"
        tools:ignore="VectorDrawableCompat"
        />

    <TextView
        android:id="@+id/minutes_left"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:theme="@style/AppTheme.TimePickerMessage"
        android:text="@string/minutes_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toEndOf="@+id/numberPicker"
        app:layout_constraintTop_toBottomOf="@id/arrowUp" />

</androidx.constraintlayout.widget.ConstraintLayout>